# symphony

./: README.md  bessel_mod.c  calc.c  dec.h  fits.c  integrate.c  main.abs.c  main.c  makefile  params.h  susceptibility_demo.py  symphony.h  symphony_tests.py
applications/: avg_cone.py  contour_notebook.ipynb  contour_plots.py  fits_sim_data.py  kernel_plots.py  new_contour.py  sampling_model.ipynb  sim_data.py  susceptibility_plots.ipynb  susceptibility_plots.py
src/: CMakeLists.txt  bessel_mod.c  calc.c  calc.h  demo.c  distribution_function_common_routines.c  distribution_function_common_routines.h  fits.c  fits.h  integrate.c  integrate.h  main.c  makefile  maxwell_juttner.c  params.c  params.h  power_law.c  python_demo.py  symphony.c  symphony.h  symphonyHeaders.pxd  symphonyPy.pyx
src/integrator/: CMakeLists.txt  integrands.c  integrands.h  integrate.c  integrate.h
src/kappa/: CMakeLists.txt  kappa.c  kappa.h  kappa_fits.c
src/maxwell_juettner/: CMakeLists.txt  maxwell_juettner.c  maxwell_juettner.h  maxwell_juettner_fits.c
src/power_law/: .CMakeLists.txt.swp  CMakeLists.txt  power_law.c  power_law.h  power_law_fits.c
src/python_interpolator/: susceptibility_interpolator.ipynb
src/susceptibility_tensor/: CMakeLists.txt  README.md  chi_ij.c  integrands.c  integrands_suscept.c  integrator.c  makefile  mueller_matrix.c  susceptibilityHeaders.pxd  susceptibilityPy.pyx  susceptibility_interpolator.py  susceptibility_tensor  susceptibility_tensor.h
